[package]
name = "web3scan"
version = "0.1.100"
edition = "2021"
authors = ["Tony Bark"]
description = "Web3Scan is a used for gathering information from EVM-based networks using Etherscan's API."
readme = "README.md"
keywords = ["evm", "ethereum", "cryptocurrency"]
categories = ["api-bindings", "cryptography::cryptocurrencies"]
license = "BSD-3-Clause OR Unlicense"
repository = "https://github.com/tonytins/web3scan"

[dependencies]
reqwest = "0.9"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"]}
dotenv = "0.15"