[package]
name = "web3scan"
version = "0.2.100"
edition = "2021"
authors = ["Tony Bark"]
description = "Web3Scan is a used for gathering information from EVM-based networks using Etherscan's API."
readme = "README.md"
keywords = ["evm", "ethereum", "cryptocurrency"]
categories = ["api-bindings", "cryptography::cryptocurrencies"]
license = "BSD-3-Clause OR Unlicense"
repository = "https://github.com/tonytins/web3scan"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
serde = { version = "1", features = ["derive"]}
dotenv = "0.15"